src/index.css
/* General */
body {
  margin: 0;
  font-family: 'NeueMontreal-Light', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #f9f8f8;
}

#body-wrapper {
  padding-top: 90px;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.header-text {
  font-family: 'NeueMontreal-Light', 'Helvetica Neue', sans-serif;
  font-weight: 600;
  font-size: 36px;
}

.subheader-text {
  font-family: 'NeueMontreal-Bold', 'Helvetica Neue', sans-serif;
  font-weight: 800;
  font-size: 24px;
  padding-top: 9px;
  padding-bottom: 9px;
}

.body-text {
  font-family: 'NeueMontreal-Light', 'Helvetica Neue', sans-serif;
  font-weight: bold;
  font-size: 18px;
  letter-spacing: 1px;
  padding: 18px;
}

/* Navbar */
#navbar {
  width: 100%;
  height: 60px;
  display: flex;
  overflow: hidden;
  /*background-color: #f9f8f8;*/
  background-color: white;
  position: fixed;
  -webkit-box-shadow: 0px 4px 60px -5px rgba(0,0,0,0.53);
  -moz-box-shadow: 0px 4px 60px -5px rgba(0,0,0,0.53);
  box-shadow: 0px 4px 60px -5px rgba(0,0,0,0.53);
  z-index: 99999;
}

#navbar a {
  display: inline-block;
  line-height: 2.5;
  font-family: Verdana, sans-serif;
  text-decoration: none;
	color: #9a0400;
	font-size: 11px;
	letter-spacing: 2px;
	text-transform: uppercase;
	position: relative;
  -webkit-transition: all 0.4s ease;
	transition: all 0.4s ease;
  padding: 15px;
}

.burger-menu a {
  color: #d1d1d1 !important;
  border-left: 2px solid #9a0400;
}
.burger-menu a:hover {
  color: white !important;
  border-left: 2px solid white;
}

#navbar > a:after {
	content: "";
	position: absolute;
	height: 2px;
	background-color: #31081F;
	width: 0;
	left: 50%;
	bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
	transform: translateX(-50%);
	-webkit-transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) all;
  	transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) all;
}

#navbar a:hover {
	color: #31081F;
}

#navbar a:hover:after {
	width: 100%;
}

#nav-image {
  display: flex;
  align-self: center;
  padding: 15px;
}
/* #9a0400 */

/* Footer */
.site-footer
{
  background-color:#26272b;
  padding:45px 0 20px;
  font-size:15px;
  line-height:24px;
  color:#737373;
}

/* Carousel */

.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
}

.slide-item {
  text-align: center;
}
.dot {
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active {
  background-color: #717171;
}

/* Portraits */

.card-image {
	display: block;
	background: #fff center center no-repeat;
	background-size: cover;
}

.card {
	display: inline-block;
	max-width: 20rem;
	margin: 1rem;
	font-size: 1rem;
	text-decoration: none;
	overflow: hidden;
	box-shadow: 0 0 3rem -1rem rgba(0,0,0,0.5);
  transition: transform 0.1s ease-in-out, box-shadow 0.1s;
  width: 300px;
}

.card:hover {
	transform: translateY(-0.5rem) scale(1.0125);
	box-shadow: 0 0.5em 3rem -1rem rgba(0,0,0,0.5);
}

.card-description {
	display: block;
	padding: 1em 0.5em;
	color: #515151;
  text-decoration: none;
  text-align: center;
}

.card-description > h2 {
	margin: 0 0 0.5em;
}

.card-description > p {
	margin: 0;
}

/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}

/* Gradient home page */

#welcome-text{
  font-size: 52px;
  text-align: center;
  margin-top: 256px;
  color:white;
  font-weight: 900;
  font-family: 'NeueMontreal-Bold', 'Helvetica Neue', sans-serif;
}

#gradient { 
  z-index: -1;
  height: 100%;
  width: 100%;
  left:0;
  right: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  opacity: 0.85;
background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #d37620, #136e22, #197a7e, #2014be, #9d13aa, #b31583);
background-size: 1800% 1800%;
/*ORIG-GRADIENT: background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3); */
-webkit-animation: rainbow 18s ease infinite;
-z-animation: rainbow 18s ease infinite;
-o-animation: rainbow 18s ease infinite;
  animation: rainbow 18s ease infinite;}

@-webkit-keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}
@-moz-keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}
@-o-keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}
@keyframes rainbow { 
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}

